all 02 and 03 styles complete

--- a/scss/style - COMPLETE.scss
+++ b/scss/style - COMPLETE.scss
@@ -188,7 +188,7 @@ footer::before {
 @include breakpoint(992px) {
     
   header {
-      background-position: 0 0, 0 45%;  /* ?? */ 
+      background-position: 0 0, 0 45%; 
   }
     
   .intro {
